fix responsive on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -176,12 +176,13 @@
     }
 
     .hero-wrapper .title {
-        font-size: 5.2rem;
+        font-size: 6rem;
         margin-top: 20px;
     }
 
     .hero-wrapper .desc {
         width: 100%;
+        font-size: 1.5rem;
     }
 
     .clients .logo {
